# HayBox-docs

./: README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml
docs/: index.md  installation.md
protoc-gen-doc/: markdown.tmpl
